# FNetShark

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.py  vcpkg.json  vcpkgInstall.py
include/FNetShark/: FileBinaryMetaData.hpp  Server.hpp
include/FNetShark/Utils/: UtilityFunctions.hpp  WinSocketError.hpp
src/: Server.cpp
src/FNetShark/: Server.cpp  main.cpp
src/FNetShark/Utils/: UtilityFunctions.cpp
